feat: new ema-trend-breakout strategy
